--- a/Funevents.html
+++ b/Funevents.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html >
+<head>  
+  <meta charset="UTF-8">
+  <title>Voyager Fun Events</title>  
+</head>
+<body>
+  
+    
+
+    
+  </body>
+</html>
