--- a/Funevents.html
+++ b/Funevents.html
@@ -1,14 +1,31 @@
+ <!DOCTYPE html>
+ <head>
+   <meta charset="utf-8">
+   <title>Voyager Fun Events</title>  
+   <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <div class="slidershow middle">
 
-<!DOCTYPE html>
-<html >
-<head>  
-  <meta charset="UTF-8">
-  <title>Voyager Fun Events</title>  
-</head>
-<body>
-  
-    
-
-    
-  </body>
+     <div class="slides">
+       <input type="radio" name="r" id="r1" checked>
+       <input type="radio" name="r" id="r2" checked>
+       <input type="radio" name="r" id="r3" checked>
+       <div class="slide s1">
+         <img src="syc.jpeg">
+       </div>
+       <div class="slide">
+        <img src="treasure.jpeg">
+       </div> 
+       <div class="slide">
+        <img src="minute.jpeg">
+       </div>
+     </div>
+     <div class="navigation">
+       <label for="r1" class="bar"></label>
+       <label for="r2" class="bar"></label>
+       <label for="r3" class="bar"></label>
+     </div>
+    </div>
+ </body>
 </html>
