--- a/Funevents.html
+++ b/Funevents.html
@@ -12,7 +12,7 @@
        <input type="radio" name="r" id="r2" checked>
        <input type="radio" name="r" id="r3" checked>
        <div class="slide s1">
-         <img src="syc.jpeg">
+         <img src="minecraft.jpg">
        </div>
        <div class="slide">
         <img src="treasure.jpeg">
