--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
  <head>
   <title>FUN EVENTS IN VOYAGER 2020</title>
-  <link rel="stylesheet" type="text/css" href="C:\Users\Rajeev\Desktop\css\bootstrap-3.3.7-dist\css\bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
-   <script type="text/javascript" src="C:\Users\Rajeev\Desktop\css\bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>
+   <script type="text/javascript" src="bootstrap.min.js"></script>
  </head>
  <body>
   <!---->
