--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
   <link rel="stylesheet" type="text/css" href="style.css"> 
   <title>Voyager fun events</title> 
-  <link rel="icon" type="image/icon" href="title.png"> 
+  <link rel="icon" type="image/icon" href="https://tse4.mm.bing.net/th?id=OIP.iFQlnrPqzkSTlK8lXofZ6gHaJL&pid=Api&P=0&w=300&h=300"> 
  </head> 
  <body> 
+
   <nav class="navbar navbar-expand-md navbar-dark   bg-dark sticky-top" id="navigation"> 
    <a class="navbar-brand"><img src="nav.png"></a> 
    <br> 
@@ -29,38 +30,60 @@
     </ul> 
    </div> 
   </nav> 
+
+
   <div class="container"> 
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"> 
+   <div id="carouselExampleIndicators" class="carousel slide full-screen-carousel" data-ride="carousel"> 
     <ol class="carousel-indicators"> 
      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li> 
      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li> 
      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> 
     </ol> 
     <div class="carousel-inner" role="listbox"> 
-     <div class="carousel-item active" style="background-image: url('https://cdn.pixabay.com/photo/2015/12/23/22/36/minecraft-1106252_1280.jpg') "> 
-      <div class="carousel-caption"> 
-       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br> </p> 
-       <a href="#"> <h2 classs="display-4">Mine craft</h2> </a> 
+     <div class="carousel-item active"  style="background-image: url('https://cdn.pixabay.com/photo/2015/12/23/22/36/minecraft-1106252_1280.jpg ') "> 
+      <div class="carousel-caption"> <!-- http://i1.ytimg.com/vi/K9IMnrIygo0/maxresdefault.jpg-->
+         <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br> </p> 
+		 -->
+		 <a href="#" class="button">MORE DETAILS</a> <br> <br><br>
+		 <a href="#" class="button">REGISTER</a>
+		 <br><br>
+	   <h2 classs="display-4"><b>MINECRAFT</b></h2>  
+	   <h4 class="tagline">TAGLINE</h4>
       </div> 
      </div> 
      <div class="carousel-item" style="background-image: url('https://images.pexels.com/photos/2127869/pexels-photo-2127869.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940')"> 
       <div class="carousel-caption"> 
-       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
-       <a href="#"> <h2 class="display-4">Treasure hunt</h2> </a> 
+       <!--    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
+	   -->
+	   <a href="#" class="button">MORE DETAILS</a> <br> <br><br>
+	   <a href="#" class="button">REGISTER</a> <br> <br>
+		<h2 class="display-4"><b>TREASURE HUNT</b></h2> 
+		<h4 class="tagline">TAGLINE</h4>
       </div> 
      </div> 
      <div class="carousel-item" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS5HmCUwnNly_Gfi9fIy1FcOP0EtMdAEIQIy5XqjKGs7bKFq9dg')"> 
       <div class="carousel-caption"> 
-       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
-       <a href="#"> <h2 class="display-4">Minute to Win it</h2> </a> 
+  <!--
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
+	  -->
+	  <a href="#" class="button">MORE DETAILS</a> <br> <br><br>
+	  <a href="#" class="button">REGISTER</a> <br> <br>
+	   <h2 class="display-4"><b>MINUTE TO WIN IT</b></h2>  
+	   <h4 class="tagline">TAGLINE</h4>
       </div> 
      </div> 
     </div> 
-    <!--
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> 
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
-    --> 
    </div> 
   </div> 
+  <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:200px;">
+	 <a class="link" href="https://ieee.vit.edu.in/index.html#content4-36"><h3>ABOUT US</h3></a> <br>
+	  <a  href="https://www.instagram.com/ieeevit/" ><i class="fa fa-instagram fa-2x" style="color: whitesmoke;"aria-hidden="true" ></i></a>
+	  <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a>
+	  <a  href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;"  aria-hidden="true"></i></a><br><br>
+	  <h3>Official IEEE-VIT Website developed by the Web Team</h3>
+
+	</div>
  </body>
 </html>
