--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
-  <link rel="stylesheet" type="text/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="style1.css"> 
   <title>Voyager fun events</title> 
   <link rel="icon" type="image/icon" href="https://tse4.mm.bing.net/th?id=OIP.iFQlnrPqzkSTlK8lXofZ6gHaJL&pid=Api&P=0&w=300&h=300"> 
  </head> 
@@ -77,13 +77,21 @@
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
    </div> 
   </div> 
-  <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:200px;">
-	 <a class="link" href="https://ieee.vit.edu.in/index.html#content4-36"><h3>ABOUT US</h3></a> <br>
+  
+  <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:40px;">
+	
 	  <a  href="https://www.instagram.com/ieeevit/" ><i class="fa fa-instagram fa-2x" style="color: whitesmoke;"aria-hidden="true" ></i></a>
 	  <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a>
 	  <a  href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;"  aria-hidden="true"></i></a><br><br>
-	  <h3>Official IEEE-VIT Website developed by the Web Team</h3>
+	
 
 	</div>
+	
+		
+		<div class="footer2" style="text-align: center; background-color: #222; width: 100%;height: 80px;">© 2019-20 Copyright:<br>
+		  <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a>
+		  <br>
+		  <a href="https://iris.vit.edu.in/iris-coc/index.html">CODE OF CONDUCT</a>
+		</div>
  </body>
 </html>
