--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</div>
 	
 		
-		<div class="footer2" style="text-align: center; background-color: #222; width: 100%;height: 80px;">© 2019-20 Copyright:<br>
+		<div class="footer2" style="text-align: center; background-color: #222; width: 100%;height: 80px;bottom: 0;">© 2019-20 Copyright:<br>
 		  <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a>
 		  <br>
 		  <a href="https://iris.vit.edu.in/iris-coc/index.html">CODE OF CONDUCT</a>
