--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
 	  <a  href="https://www.instagram.com/ieeevit/" ><i class="fa fa-instagram fa-2x" style="color: whitesmoke;"aria-hidden="true" ></i></a>
 	  <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a>
 	  <a  href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;"  aria-hidden="true"></i></a><br><br>
-	
-
-	</div>
-	
-		
-		<div class="footer2" style="text-align: center; background-color: #222; width: 100%;height: 80px;bottom: 0;">© 2019-20 Copyright:<br>
+		<p>© 2019-20 Copyright:<p><br>
 		  <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a>
 		  <br>
 		  <a href="https://iris.vit.edu.in/iris-coc/index.html">CODE OF CONDUCT</a>
