--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
    </div> 
   </div> 
   
-    <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:120px;">
+    <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:80px;">
 	
 	  <a  href="https://www.instagram.com/ieeevit/" ><i class="fa fa-instagram fa-2x" style="color: whitesmoke;"aria-hidden="true" ></i></a>
 	  <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a>
-	  <a  href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;"  aria-hidden="true"></i></a><br><br>
-		 <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a><br>
+	  <a  href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;"  aria-hidden="true"></i></a><br>
+		 <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a>
 		 <a href="https://iris.vit.edu.in/iris-coc/index.html">CODE OF CONDUCT</a>
   </div>
  </body>
