--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul> 
    </div> 
   </nav> 
-  <div class="container"> 
+  <div class="container-lg"> 
    <div id="carouselExampleIndicators" class="carousel slide full-screen-carousel" data-ride="carousel"> 
     <ol class="carousel-indicators"> 
      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li> 
@@ -41,7 +41,7 @@
       <div class="carousel-caption"> 
        <!-- http://i1.ytimg.com/vi/K9IMnrIygo0/maxresdefault.jpg--> 
        <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br> </p> 
-     --> 
+      --> 
        <a href="#" class="button">MORE DETAILS</a> 
        <br> 
        <br> 
@@ -54,7 +54,7 @@
       </div> 
      </div> 
      <div class="carousel-item" style="background-image: url('https://images.pexels.com/photos/2127869/pexels-photo-2127869.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940')"> 
-      <div class="carousel-caption"> 
+      <div class="carousel-caption "> 
        <!--    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
      --> 
        <a href="#" class="button">MORE DETAILS</a> 
