--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
        <!-- http://i1.ytimg.com/vi/K9IMnrIygo0/maxresdefault.jpg--> 
        <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br> </p> 
       --> 
+       <h3 classs="display-4"><b>MINECRAFT</b></h3> 
+       <h5 class="tagline">TAGLINE</h5> 
+       <br> 
        <a href="#" class="button">MORE DETAILS</a> 
        <br> 
        <br> 
@@ -49,14 +52,15 @@
        <a href="#" class="button">REGISTER</a> 
        <br> 
        <br> 
-       <h2 classs="display-4"><b>MINECRAFT</b></h2> 
-       <h4 class="tagline">TAGLINE</h4> 
       </div> 
      </div> 
      <div class="carousel-item" style="background-image: url('https://images.pexels.com/photos/2127869/pexels-photo-2127869.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940')"> 
       <div class="carousel-caption "> 
        <!--    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
      --> 
+       <h3 class="display-4"><b>TREASURE HUNT</b></h3> 
+       <h5 class="tagline">TAGLINE</h5> 
+       <br> 
        <a href="#" class="button">MORE DETAILS</a> 
        <br> 
        <br> 
@@ -64,8 +68,6 @@
        <a href="#" class="button">REGISTER</a> 
        <br> 
        <br> 
-       <h2 class="display-4"><b>TREASURE HUNT</b></h2> 
-       <h4 class="tagline">TAGLINE</h4> 
       </div> 
      </div> 
      <div class="carousel-item" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS5HmCUwnNly_Gfi9fIy1FcOP0EtMdAEIQIy5XqjKGs7bKFq9dg')"> 
@@ -73,6 +75,9 @@
        <!--
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
     --> 
+       <h3 class="display-4"><b>MINUTE TO WIN IT</b></h3> 
+       <h5 class="tagline">TAGLINE</h5> 
+       <br> 
        <a href="#" class="button">MORE DETAILS</a> 
        <br> 
        <br> 
@@ -80,8 +85,6 @@
        <a href="#" class="button">REGISTER</a> 
        <br> 
        <br> 
-       <h2 class="display-4"><b>MINUTE TO WIN IT</b></h2> 
-       <h4 class="tagline">TAGLINE</h4> 
       </div> 
      </div> 
     </div> 
@@ -89,13 +92,12 @@
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
    </div> 
   </div> 
-  <div class="footer" id="last" style="text-align: center; background-color: #333e60; margin: 0; background-size: auto;  bottom:0; width:100%;  height:80px;"> 
-   <a href="https://www.instagram.com/ieeevit/"><i class="fa fa-instagram fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a> 
+  <div class="footer" id="last" style="text-align: center; background-color: #343a40!important; margin: 0; background-size: auto;  bottom:0; width:100%;  height:80px;"> 
+   <a href="https://www.instagram.com/ieeevit/"><i class="fa fa-instagram fa-2x" style="color: whitesmoke; margin-top: 2%; margin-inline-end: 2%" aria-hidden="true"></i></a> 
    <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a> 
    <a href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a> 
    <br> 
    <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a> 
-   <a href="https://iris.vit.edu.in/iris-coc/index.html">CODE OF CONDUCT</a> 
   </div> 
  </body>
 </html>
