--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  </head> 
  <body> 
   <nav class="navbar navbar-expand-md navbar-dark   bg-dark sticky-top" id="navigation"> 
-   <a class="navbar-brand"><img src="nav.png"></a> 
+   <a class="navbar-brand"><img src="https://ieee.vit.edu.in/6assets/images/ieeevit-blue-1-5017x1103.png" width="200" height="70"></a> 
    <br> 
    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"> <span class="navbar-toggler-icon"></span> </button> 
    <div class="collapse navbar-collapse" id="collapse_target"> 
