--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  </head> 
  <body> 
   <nav class="navbar navbar-expand-md navbar-dark   bg-dark sticky-top" id="navigation"> 
-   <a class="navbar-brand"><img src="https://ieee.vit.edu.in/6assets/images/ieeevit-blue-1-5017x1103.png" width="200" height="70"></a> 
+   <a class="navbar-brand"><img src="nav.png"></a> 
    <br> 
    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"> <span class="navbar-toggler-icon"></span> </button> 
    <div class="collapse navbar-collapse" id="collapse_target"> 
@@ -70,7 +70,7 @@
        <br> 
       </div> 
      </div> 
-     <div class="carousel-item" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS5HmCUwnNly_Gfi9fIy1FcOP0EtMdAEIQIy5XqjKGs7bKFq9dg')"> 
+     <div class="carousel-item" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcThL54UDypf1mr4UQ1OaAtybLMfhtZYtUwFqkgpQ6k600Zyp3aF')"> 
       <div class="carousel-caption"> 
        <!--
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
@@ -97,7 +97,7 @@
    <a href="https://twitter.com/vidyalankarieee?lang=en"><i class="fa fa-twitter fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a> 
    <a href="https://www.facebook.com/IEEEVIT1/"><i class="fa fa-facebook fa-2x" style="color: whitesmoke;" aria-hidden="true"></i></a> 
    <br> 
-   <a href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a> 
+   <a class="link" href="https://ieee.vit.edu.in/"> IEEE-VIT STUDENT BRANCH</a> 
   </div> 
  </body>
 </html>
