--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        <h3 classs="display-4"><b>MINECRAFT</b></h3> 
        <h5 class="tagline">TAGLINE</h5> 
        <br> 
-       <a href="#" class="button">MORE DETAILS</a> 
+       <a href="Minecraft.html" class="button">MORE DETAILS</a> 
        <br> 
        <br> 
        <br> 
