--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
    <div class="modal-header">
    </div>
    <div class="modal-body" style="background-color: white;">
-      <img class="img-fluid mx-auto d-block" src="https://lh3.googleusercontent.com/proxy/eZljG6_8NezoXoJ_cuAVB_sAXni0vPaw0YMlgh_9K_JuwknH6xyuSyKO9Id9n2JwTEHhnNIfOitPkPhUDWK98xzI7lyky5IruUFN5OPHgG519tAdDEvNa4d6KGHW6JVND0doYTXgZpb1wbOkYSxouV5Q5_0"> 
+      <img class="img-fluid mx-auto d-block" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg_q3h9KJRKVhxwoqmU6Lryng9eYbCNbDSgJKfV7CgxDcpJiK6zA&s"> 
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br></p> 
    
    </div>
