--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li> 
     </ol> 
     <div class="carousel-inner" role="listbox"> 
-     <div class="carousel-item active" id='c1'> 
+     <div class="carousel-item active" >
+       <img src="https://cdn.mos.cms.futurecdn.net/cKaSHypMx9DKTTEhk4cL7e.jpg" style="width:100vw; height:100vh;background-size:cover"> 
       <div class="carousel-caption"> 
        <!-- http://i1.ytimg.com/vi/K9IMnrIygo0/maxresdefault.jpg--> 
        <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br> </p> 
@@ -56,7 +57,8 @@
       </div> 
      </div> 
   
-      <div class="carousel-item" id="c2"> 
+      <div class="carousel-item"> 
+        <img src="https://i.pinimg.com/originals/62/b7/2d/62b72d8c3d2fe65ceee31276dc9f442f.png" style="width:100vw; height:100vh;background-size:cover"> 
          <div class="carousel-caption"> 
        <h3 class="display-5"><b>TinkerCad Workshop</b></h3> 
        <h5 class="tagline">Make a Home Automation System Using TinkerCad</h5> 
